Removed li added h2

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<header>
 			<div class="full-width">
-				<div class="half-width" id="homelink"><a href="/index.html">Maiden Handtalk</a></li>
+				<div class="half-width" id="homelink"><a href="/index.html">Maiden Handtalk</a>
 				</div>
 				
 				<div class="half-width">
@@ -33,6 +33,7 @@
 		<main>
 			<div class="full-width">
 				<h1>About</h1>
+				<h2>A little bit about me</h2>
 				
 				<p>Purpose:  To discuss Jordan’s idea of Maiden Handtalk and linguistics of signed languages.
 					Focus questions:  
